@@ -1139,56 +1139,53 @@ name|objects
 operator|.
 name|size
 argument_list|()
-operator|<
+operator|==
 name|ids
 operator|.
 name|size
 argument_list|()
 condition|)
 block|{
-comment|// find missing ids
-name|StringBuilder
-name|buffer
-init|=
-operator|new
-name|StringBuilder
+return|return;
+block|}
+if|else if
+condition|(
+name|objects
+operator|.
+name|size
 argument_list|()
-decl_stmt|;
-name|buffer
-operator|.
-name|append
-argument_list|(
-literal|"Some ObjectIds are missing from the database. "
-argument_list|)
-expr_stmt|;
-name|buffer
-operator|.
-name|append
-argument_list|(
-literal|"Expected "
-argument_list|)
-operator|.
-name|append
-argument_list|(
+operator|>
 name|ids
 operator|.
 name|size
 argument_list|()
-argument_list|)
-operator|.
-name|append
+condition|)
+block|{
+throw|throw
+operator|new
+name|CayenneRuntimeException
 argument_list|(
-literal|", fetched "
-argument_list|)
+literal|"Expected %d objects, retrieved %d"
+argument_list|,
+name|ids
 operator|.
-name|append
-argument_list|(
+name|size
+argument_list|()
+argument_list|,
 name|objects
 operator|.
 name|size
 argument_list|()
 argument_list|)
-expr_stmt|;
+throw|;
+block|}
+comment|// We have less objects then ids
+comment|// check that we are really missing some ids and throw an exception in that case
+name|StringBuilder
+name|buffer
+init|=
+literal|null
+decl_stmt|;
 name|boolean
 name|first
 init|=
@@ -1243,6 +1240,20 @@ condition|)
 block|{
 if|if
 condition|(
+name|buffer
+operator|==
+literal|null
+condition|)
+block|{
+name|buffer
+operator|=
+operator|new
+name|StringBuilder
+argument_list|()
+expr_stmt|;
+block|}
+if|if
+condition|(
 name|first
 condition|)
 block|{
@@ -1273,6 +1284,35 @@ argument_list|)
 expr_stmt|;
 block|}
 block|}
+comment|// we have some objects missing, throw
+if|if
+condition|(
+name|buffer
+operator|!=
+literal|null
+condition|)
+block|{
+name|buffer
+operator|.
+name|insert
+argument_list|(
+literal|0
+argument_list|,
+literal|"Some ObjectIds are missing from the database. Expected "
+operator|+
+name|ids
+operator|.
+name|size
+argument_list|()
+operator|+
+literal|", fetched "
+operator|+
+name|objects
+operator|.
+name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
 throw|throw
 operator|new
 name|CayenneRuntimeException
@@ -1280,37 +1320,6 @@ argument_list|(
 name|buffer
 operator|.
 name|toString
-argument_list|()
-argument_list|)
-throw|;
-block|}
-if|else if
-condition|(
-name|objects
-operator|.
-name|size
-argument_list|()
-operator|>
-name|ids
-operator|.
-name|size
-argument_list|()
-condition|)
-block|{
-throw|throw
-operator|new
-name|CayenneRuntimeException
-argument_list|(
-literal|"Expected %d objects, retrieved %d"
-argument_list|,
-name|ids
-operator|.
-name|size
-argument_list|()
-argument_list|,
-name|objects
-operator|.
-name|size
 argument_list|()
 argument_list|)
 throw|;
