@@ -157,6 +157,22 @@ name|apache
 operator|.
 name|cayenne
 operator|.
+name|testdo
+operator|.
+name|testmap
+operator|.
+name|Painting
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|cayenne
+operator|.
 name|unit
 operator|.
 name|di
@@ -1541,6 +1557,71 @@ name|size
 argument_list|()
 argument_list|)
 expr_stmt|;
+block|}
+annotation|@
+name|Test
+specifier|public
+name|void
+name|test_CAY_2092
+parameter_list|()
+block|{
+name|List
+argument_list|<
+name|Artist
+argument_list|>
+name|artists
+init|=
+name|ObjectSelect
+operator|.
+name|query
+argument_list|(
+name|Artist
+operator|.
+name|class
+argument_list|)
+operator|.
+name|orderBy
+argument_list|(
+name|Artist
+operator|.
+name|PAINTING_ARRAY
+operator|.
+name|dot
+argument_list|(
+name|Painting
+operator|.
+name|PAINTING_TITLE
+argument_list|)
+operator|.
+name|asc
+argument_list|()
+argument_list|)
+operator|.
+name|pageSize
+argument_list|(
+literal|5
+argument_list|)
+operator|.
+name|select
+argument_list|(
+name|context
+argument_list|)
+decl_stmt|;
+comment|// just read everything to trigger page resolving
+for|for
+control|(
+name|Artist
+name|artist
+range|:
+name|artists
+control|)
+block|{
+name|assertNotNull
+argument_list|(
+name|artist
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 block|}
 end_class
